# corner

./: .gitignore  LICENSE  README.md  corner.cabal
app/: Main.hs
src/Corner/: Auth.hs  Context.hs  Json.hs  Middleware.hs  OpenApi.hs  RouteBuilder.hs  Router.hs  Server.hs  Types.hs  WebSocket.hs
test/: Spec.hs
