cabal-version:       3.0
name:                corner
version:             0.1.0.0
synopsis:            A lightweight Haskell HTTP server built on WAI/Warp.
description:         corner is a learning project for building HTTP servers in Haskell.
                     It uses Warp + WAI with minimal dependencies and a hand-written router.
license:             MIT
license-file:        LICENSE
author:              cdcd
maintainer:          cdcd@example.com
build-type:          Simple
extra-doc-files:     README.md

tested-with:         GHC ==9.4.8

common warnings
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

library
  import:             warnings
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:
      base >=4.14 && <5
    , bytestring >=0.11 && <0.13
    , text >=1.2 && <3
    , wai >=3.2 && <3.3
    , warp >=3.3 && <3.4
    , http-types >=0.12 && <0.13
  exposed-modules:
      Corner.Types
    , Corner.Router
    , Corner.Server
  other-modules:

executable corner
  import:             warnings
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  build-depends:
      base >=4.14 && <5
    , corner
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite corner-test
  import:             warnings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  default-language:   Haskell2010
  build-depends:
      base >=4.14 && <5
    , corner
    , hspec >=2.7 && <3
    , hspec-wai >=0.11 && <0.12
    , wai >=3.2 && <3.3
    , bytestring >=0.11 && <0.13
    , text >=1.2 && <3
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
